# HudsonMCP

./: LICENSE  README.en.md  README.md  pyproject.toml
src/hudson_mcp/: config.py  logging_store.py  redaction.py  schemas.py  server.py
src/hudson_mcp/core/: constraint_lookup.py  feedback_loop.py  purpose_recovery.py  recovery_decision.py  report_generator.py  situation_assessment.py  value_reprioritization.py
src/hudson_mcp/detectors/: api_break_detector.py  build_failure_detector.py  dangerous_package_detector.py  git_diff_detector.py  repeated_failure_detector.py  scope_expansion_detector.py  secret_access_detector.py  secret_exposure_detector.py  secret_propagation_detector.py  test_failure_detector.py  value_loss_detector.py
src/hudson_mcp/maps/: dev-purpose-map.yaml  dev-rule-map.yaml  dev-value-hierarchy.yaml
src/hudson_mcp/policies/: build-policy.yaml  feedback-policy.yaml  package-risk-policy.yaml  recovery-decision-policy.yaml  scope-policy.yaml  secret-policy.yaml  severity-policy.yaml
src/hudson_mcp/tools/: __init__.py  definitions.py
