[project]
name = "hudson-mcp"
version = "0.1.0"
description = "Post-incident recovery decision engine for Claude Code"
license = { text = "MIT" }
authors = [
    { name = "Takayuki_Suzuki", email = "snow.falconine@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
hudson-mcp = "hudson_mcp.server:main"

[project.urls]
Repository = "https://github.com/Sourei-S/hudson-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hudson_mcp"]
